Fix Collapse Background & Fetch Path

--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -502,6 +502,7 @@ button {
   transform-origin: top;
   padding-left: 15px;
   height: 0px;
+  background-color: #f6f6f6;
 }
 .collapseContent--active {
   padding-top: 15px;
