--- a/src/assets/styles/sass/components/_collapse.scss
+++ b/src/assets/styles/sass/components/_collapse.scss
@@ -52,6 +52,7 @@
   transform-origin: top;
   padding-left: 15px;
   height: 0px;
+  background-color: #f6f6f6;
   &--active {
     padding-top: 15px;
     height: 100%;
